--- a/big-gui/src/component/Measurement.css
+++ b/big-gui/src/component/Measurement.css
@@ -1,3 +1,4 @@
 #measurement {
     display: inline-block;
+    vertical-align: top;
 }
